chore: remove old (jvm 16) illegal access flag
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>